Commit mostly working, added mobile support Needs testing on mobile more, width incompatability? Fix input order on mobile, add password verification

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 body, html {
     margin: 0px;
-    height: 100vh;
     width: 100%;
 }
 
@@ -19,6 +18,7 @@ body {
     position: relative;
     overflow: hidden;
     background-color: #af6639;
+    min-width: 450px;
 }
 
 .imageOverlay {
@@ -28,7 +28,7 @@ body {
     align-items: center;
     gap: 3%;
     position: absolute;
-    top: 25%;
+    top: 23%;
     width: 100%;
     height: 15%;
     background-color: rgba(0, 0 , 0, 0.5);
@@ -46,6 +46,7 @@ body {
     font-size: 7vh;
     background: -webkit-linear-gradient(#eee, #ff7300);
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
     font-family: "Parchment";
     white-space: nowrap; 
@@ -66,23 +67,26 @@ body {
 
 .top {
     align-items: flex-end;
-    height: 33%;
+    height: 38%;
     background-color: #f4f4f4;
-    font-size: 20px;
+    font-size: 1.6rem;
     font-weight: bold;
     padding-bottom: 20px;
 }
 
 .middle {
-    align-items: center;
-    height: 34%;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 20px;
+    height: 24%;
     background-color: #fefefe;
     padding-left: 40px;
 }
 
 .bottom {
     align-items: flex-start;
-    height: 33%;
+    height: 38%;
     background-color: #f4f4f4;
     padding-top: 40px;
 }
@@ -91,20 +95,179 @@ body {
 .middle,
 .bottom {
     display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
     width: 100%;
     box-sizing: border-box;
 }
 
-.textbox {
+.topTextbox {
+    align-items: flex-start;
+    max-width: 75%;
+    margin-left: 40px;
+    width: 575px;
+}
+
+form {
+    display: flex;
+    flex-direction: row;
+    column-gap: 20px;
+}
+
+.leftFormSide,
+.rightFormSide,
+.inputPair,
+.topTextbox {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    width: 75%;
+}
+
+.inputPair {
+    margin: 0px 40px 10px 0px;
+    gap: 3px;
+}
+
+label {
+    color: #313131;
+    font-weight: bold;
+}
+
+input {
+    width: 250px;
+    height: 30px;
+    border: solid #c4c4c4 1px;
+    border-radius: 5px;
+    outline: none;
+    box-sizing: border-box;
+    transition: all 0.30s ease-in-out;
+}
+
+input:focus {
+    border: solid #ffb566 1px;
+    box-shadow: 0px 0px 5px grey;
+}
+
+input:focus:invalid {
+    border: solid red 1px;
+    box-shadow: 0px 0px 5px grey;
+}
+
+
+.headerText{
+    font-size: 1.7rem;
+    font-weight: bold;
+}
+
+.bottomTextbox {
+    margin-left: 40px;
+    font-size: 1.2rem;
+}
+
+button {
+    width: 200px;
+    height: 45px;
+    font-weight: bold;
+    font-size: 1.1rem;
+    margin-bottom: 30px;
+    border-radius: 10px;
+    background-color: #af6639;
+    color: white;
+    border: solid #975830 2px;
+    box-shadow: 3px 3px 10px grey;
+}
+
+.format {
+    font-weight: normal;
+}
+
+span {
+    color: #975830;
+    font-weight: bolder;
 }
 
 @font-face {
     font-family: "Parchment";
     src: url(./ParchmentMf-Vqge.ttf) format("TrueType");
+}
+
+@media (max-width: 1100px) {
+    .top {
+        height: 30%;
+    }
+
+    .middle {
+        height: 40%;
+    }
+
+    .bottom {
+        height: 30%;
+    }
+
+    form {
+        flex-direction: column;
+    }
+
+    .rightSide {
+        max-width: calc(100vw - 450px);
+    }
+}
+
+@media (max-width: 800px) {
+    body {
+        flex-direction: column;
+        width: 100vw;
+        max-width:100%
+    }
+
+    .leftSide {
+        max-width: 100%;
+        width: 100%;
+        overflow: visible;
+    }
+
+    .rightSide {
+        max-width: 100%;
+        width: 100%;
+    }
+
+    .imageOverlay {
+        top: 45%;
+    }
+
+    .top {
+        min-height: auto;
+        justify-content: center;
+    }
+
+    .middle {
+        min-height: 550px;
+        align-items: center;
+    }
+
+    .bottom {
+        min-height: 300px;
+        justify-content: center;
+    }
+
+    .top,
+    .middle,
+    .bottom {
+        min-width: 100%;
+    }
+    
+    .backgroundImg {
+        overflow: hidden;
+    }
+
+    .alreadyAccount {
+        margin-left: -25px;
+    }
+
+    label {
+        font-size: 20px;
+        text-align: center;
+    }
+
+    input {
+        width: 60vw;
+        height: 35px;
+    }
 }
